src/memory-mosaic/style/index.scss
$border-color: #2d2d2d;
// $background-color: #3B3251;
$background-color: lighten(#2F273E, 3%);

//
$white: #fff;
$pink: #FD297D;

.memory-mosaic {
  color: $white;
  background:  $background-color;
  padding: 30px 10px;

  .game-container {
    max-width: 375px;
    margin: auto;
    position: relative;
  }

  .field {
    height: 375px;
    margin: 7px auto 50px;
    position: relative;
    z-index: 2;

    @media (max-width: 375px) {
      height: 300px;
      width: 300px;
    }
    // background: url('../../assets/images/pat-t.png') top left, ;
    // background-position: top left;
    // padding-left: 100px;
    // margin-left: -100px;

    &.decorated::before {
      z-index: 1;
      content: '';
      display: block;
      width: 100%;
      height: 100%;
      position: absolute;
      top: -20px;
      left: -100px;
      background: url('../../assets/images/pat-t.png') no-repeat;
    }

    &.decorated::after {
      z-index: 1;
      content: '';
      display: block;
      width: 186px;
      height: 246px;
      position: absolute;
      bottom: -53px;
      right: -43px;
      background: url('../../assets/images/patt-bottom.png') no-repeat;
    }

    @media (max-width: 375px) {
      height: 300px;
      width: 300px;

      &.decorated::before,
      &.decorated::after {
        display: none;
      }
    }
  }

  .row {
    display: flex;
    justify-content: center;
    width: 100%;

    &:first-of-type .cell {
      border-top: 0;
    }
  }

  .cell {
    box-sizing: border-box;
    border: 1px solid $background-color;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 3em;
    z-index: 3;
    // padding: 1px;

    &:first-child {
      border-left: 0;
    }

    &:last-child {
      border-right: 0;
    }

    &:hover, &:focus, &:active {
      // background: $white !important;
    }

  }

  .lives {
    color: $pink;
    font-size: 1em;
    text-align: right;

    .fa-heart {
      margin-left: 5px;
    }

    .hidden {
      opacity: 0;
      transform: translateY(-10px);
      transition: .3s;
      animation: disappearing .8s;
    }
  }

  .preloader {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;
    z-index: 100;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: $background-color;

    .loader {
      margin-bottom: 20px;
    }
  }

  @keyframes disappearing {
    0%    {transform: translateY(0); opacity: 1;}
    75%   {transform: translateY(-10px); opacity: .6;}
    100%  {transform: translateY(-14px); opacity: 0;}
  }
}

